force-app/main/default/objects/vlocity_ps__Referral__c/vlocity_ps__Referral__c.object-meta.xml
<CustomObject>
    <description>Represents referral to public assistance services such as medical, counseling, drug addiction, legal, empoyment etc.</description>
    <label>Referral</label>
    <nameField>
        <label>Referral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>