force-app/main/default/objects/vlocity_ps__Referral__c/fields/vlocity_ps__ChildPlacementId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ChildPlacementId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Placement</label>
    <referenceTo>vlocity_ps__Placement__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>ReferralChildPlacements</relationshipName>
    <type>Lookup</type>
</CustomField>