force-app/main/default/objects/vlocity_ps__Referral__c/fields/vlocity_ps__IsFollowupNeeded__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IsFollowupNeeded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow-up Needed?</label>
    <type>Checkbox</type>
</CustomField>