force-app/main/default/objects/vlocity_ps__Referral__c/fields/vlocity_ps__Outcome__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Outcome__c</fullName>
    <label>Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>