force-app/main/default/objects/vlocity_ps__Referral__c/fields/vlocity_ps__ProgramId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ProgramId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>vlocity_ps__PublicProgram__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>