force-app/main/default/objects/vlocity_ps__Referral__c/fields/vlocity_ps__Reason__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Reason__c</fullName>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>