force-app/main/default/objects/vlocity_ps__Referral__c/fields/vlocity_ps__ReferralCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ReferralCompletionDate__c</fullName>
    <label>Actual Completion Date</label>
    <type>Date</type>
</CustomField>