force-app/main/default/objects/vlocity_ps__Referral__c/fields/vlocity_ps__ReferralDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ReferralDate__c</fullName>
    <label>Referral Date</label>
    <type>Date</type>
</CustomField>