force-app/main/default/objects/vlocity_ps__Referral__c/fields/vlocity_ps__ReferralNumberofUnits__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ReferralNumberofUnits__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Referral Number of Units</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>