force-app/main/default/objects/vlocity_ps__Referral__c/fields/vlocity_ps__ServiceOfferingId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ServiceOfferingId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Offering</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>