force-app/main/default/objects/vlocity_ps__Referral__c/fields/vlocity_ps__Stage__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Stage__c</fullName>
    <description>Referral Disposition</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Contacted Provider</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>No Action Taken</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>