force-app/main/default/objects/vlocity_ps__Referral__c/fields/vlocity_ps__ToCompleteByDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ToCompleteByDate__c</fullName>
    <label>Target Completion Date</label>
    <type>Date</type>
</CustomField>