force-app/main/default/objects/vlocity_ps__Referral__c/fields/vlocity_ps__Type__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abuse</fullName>
            </value>
            <value>
                <fullName>Addiction</fullName>
            </value>
            <value>
                <fullName>Bereavement</fullName>
            </value>
            <value>
                <fullName>Counseling</fullName>
            </value>
            <value>
                <fullName>Crisis Services</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Food Banks</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Senior Services</fullName>
            </value>
            <value>
                <fullName>Youth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>